# procurador-de-camaras

./: .env.example  .gitignore  README.md  check_censys.py  check_imports.py  check_main_imports.py  master_test.py  pyproject.toml  requirements.txt  test_censys.py  test_censys_combo.py  test_censys_final.py  test_censys_http.py  test_pipeline.py
data/: test_procurador.db
data/master_test/: playlist.m3u  scan.csv  scan.html  scan.json  tui_screenshot.html  web_dashboard.html
data/test_timing/: scan_de741211_1782266174.json
planeamento/: 00-INDICE.md  00-MASTER-PLAN.md  01-VISAO-GERAL.md  02-DASHBOARD-DESIGN.md  03-ARQUITETURA.md  04-FASE-0-PESQUISA.md  05-FASE-1-CORE.md  06-FASE-2-DASHBOARD.md  07-FASE-3-FEATURES.md  08-FASE-4-POLISH.md  09-MELHORES-PRATICAS.md  10-CODIGO-EXEMPLO.md  11-CHECKLIST.md  12-AUDITORIA-COMPLETA.md  12-REVIEW-AUDITORIA.md  13-OTIMIZACAO-ACESSO.md  PROMPT-IMPLEMENTACAO.md
procurador/: __init__.py  __main__.py  config.py
procurador/core/: alerts.py  brute.py  cve.py  daemon.py  database.py  geoip.py  models.py  onvif.py  scanner.py  stream.py  wordlists.py
procurador/export/: csv_export.py  html_report.py  json_export.py  m3u.py
procurador/sources/: censys.py  local.py  shodan.py
procurador/ui/: tui.py
procurador/ui/web/: app.py  map_export.py
procurador/ui/web/templates/: camera_detail.html  dashboard.html
procurador/utils/: helpers.py  logger.py
tests/: __init__.py  conftest.py  test_brute.py  test_censys.py  test_models.py  test_scanner.py  test_timing.py
