[project]
name = "procurador"
version = "1.0.0"
description = "Procurador de Câmara — descoberta e auditoria de câmaras IP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Soberana" }]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "censys>=2.2.0",
    "scapy>=2.5.0",
    "onvif-python>=0.2.10",
    "WSDiscovery>=2.1.0",
    "geoip2>=4.6.0",
    "flask>=3.0.0",
    "folium>=0.15.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# Ruff config
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Whitelist de regras permitidas
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # function call in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"procurador/__main__.py" = ["E402", "B007"]
"procurador/core/scanner.py" = ["E402", "B007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy config
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true

# Pytest config
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
